[package]
name = "Warp-Bite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
warp = "0.3.2"
# tracing feature should not be when deployed
tokio = { version = "1.16.0", features = ["full", "tracing"] }
futures = { version = "0.3.19", default-features = true }
console-subscriber = "0.1.2"